Ticket 226 fix is in this branch to fix the mobile social blocks display better and more legible

--- a/gsusa/content/src/main/theme/custom/scss/partials/_social.scss
+++ b/gsusa/content/src/main/theme/custom/scss/partials/_social.scss
@@ -18,6 +18,9 @@
   @media #{$medium-up} {
     @include grid-column(8);
   }
+  @media #{$small-only} {
+    margin-bottom: rem-calc(35);
+  }
   .wrapper {
     background-color: $white;
     position: relative;
@@ -31,6 +34,12 @@
       margin-left: -97px;
       cursor: pointer;
     }
+  }
+}
+.twitter-timeline,
+.fb-page #u_0_0 > div {
+  @media #{$small-only} {
+    width: 100% !important;
   }
 }
 .blog-feed {
